--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "transcribe-steaming-example",
+  "name": "transcribatron",
   "version": "1.0.0",
   "description": "Using the AWS SDK for JavaScript V3 to .",
-  "main": "index.js",
+  "main": "index.html",
   "repository": "git@github.com/awsdocs/aws-doc-sdk-examples/tree/master/javascriptv3/example_code/cross-services/transcribe-streaming.git",
-  "author": "brmur",
+  "author": "brmur and (Jamal, Kaitan) partners", 
   "license": "Apache 2.0",
   "scripts": {
+    
     "build": "webpack --config ./webpack.config.cjs",
-    "test": "exit 0"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.165.0",
@@ -17,11 +18,12 @@
     "@aws-sdk/client-transcribe-streaming": "^3.165.0",
     "@aws-sdk/client-translate": "^3.165.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.165.0",
-    "get-user-media-promise": "^1.1.4",
     "buffer": "^6.0.3",
-    "stream": "0.0.2",
+    "express": "^4.18.2",
+    "get-user-media-promise": "^1.1.4",
     "microphone-stream": "^6.0.1",
     "process": "^0.11.10",
+    "stream": "0.0.2",
     "workbox-webpack-plugin": "^6.5.4"
   },
   "devDependencies": {
